# Minecraft_clone

./: .gitignore  CMakeLists.txt  README.md  RPG_F.sln  license.md
Minecraft/: Biome.h  Birch_Biome.cpp  Birch_Biome.h  Block.cpp  Block.h  Block_Heavy.cpp  Block_Heavy.h  Camera.h  Chunk.cpp  Chunk.h  Crosshair.cpp  Crosshair.h  Desert_Biome.cpp  Desert_Biome.h  Forest_Biome.cpp  Forest_Biome.h  Light.h  Menu.cpp  Menu.h  Mesh.h  Minecraft.filters  Minecraft.sln  Minecraft.vcxproj  Minecraft.vcxproj.filters  Model.h  Snow_Biome.cpp  Snow_Biome.h  State.h  Structure.cpp  Structure.h  Taiga_Biome.cpp  Taiga_Biome.h  Texture.h  Tree.cpp  Tree.h  World.cpp  World.h  main.cpp
Minecraft/shaders/: fragementShader.fs  menF.fs
RPG_F/: Camera.h  Model.cpp  RPG_F.vcxproj  Shader.h  Texture.h  main.cpp
RPG_F/textures/cube/: grass_cube.mtl
res/include/glad/: CMakeLists.txt  glad.c  glad.h
shaders/: fragementShader.fs  menV.vs  vertexShader.vs
